<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utctest.Materia2" >

   <LinearLayout
        android:id="@+id/linear1B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewSOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1S" />

        <ListView
            android:id="@+id/listView1B"
            android:layout_width="match_parent"
            android:layout_height="350dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView3B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2S" />

        <ListView
            android:id="@+id/listView2B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView4B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta3S" />

        <ListView
            android:id="@+id/listView3B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewRFinalB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta4S" />

        <ListView
            android:id="@+id/listView4B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView6B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta5S" />

        <ListView
            android:id="@+id/listView5B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView7B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta6S" />

        <ListView
            android:id="@+id/listView6B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear7B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView8B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta7S" />

        <ListView
            android:id="@+id/listView7B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear8B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView9B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta8S" />

        <ListView
            android:id="@+id/listView8B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear9B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView10B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta9S" />

        <ListView
            android:id="@+id/listView9B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear10B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView11B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta10S" />

        <ListView
            android:id="@+id/listView10B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>
    
    

    <Button
        android:id="@+id/buttonContinuarB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continuar"
        android:text="Continuar" />

    <TextView
        android:id="@+id/textViewACB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="TextView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/incorrectoTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewAC"
        android:layout_below="@+id/textViewAC"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonMenuB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContinuar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="menu"
        android:text="Menu"
        android:visibility="gone" />

</RelativeLayout>
