<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utctest.Materia4" >

    <LinearLayout
        android:id="@+id/linear1D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewSOD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1SF" />

        <ListView
            android:id="@+id/listView1D"
            android:layout_width="match_parent"
            android:layout_height="350dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView3D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2SF" />

        <ListView
            android:id="@+id/listView2D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView4D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta3SF" />

        <ListView
            android:id="@+id/listView3D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewRFinalD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta4SF" />

        <ListView
            android:id="@+id/listView4D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView6D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta5SF" />

        <ListView
            android:id="@+id/listView5D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView7D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta6SF" />

        <ListView
            android:id="@+id/listView6D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear7D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView8D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta7SF" />

        <ListView
            android:id="@+id/listView7D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear8D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView9D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta8SF" />

        <ListView
            android:id="@+id/listView8D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear9D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView10D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta9SF" />

        <ListView
            android:id="@+id/listView9D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear10D"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView11D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta10SF" />

        <ListView
            android:id="@+id/listView10D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>
    
    

    <Button
        android:id="@+id/buttonContinuarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continuar"
        android:text="Continuar" />

    <TextView
        android:id="@+id/textViewACD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="TextView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/incorrectoTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewACD"
        android:layout_below="@+id/textViewAC"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonMenuD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContinuar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="menu"
        android:text="Menu"
        android:visibility="gone" />

</RelativeLayout>
